--- a/log_4000_5.0E-4_128_0.5
+++ b/log_4000_5.0E-4_128_0.5
@@ -1,25 +1,256 @@
-Similarity between models-2/ad2x4_gb882-prt.wrl and models-2/ad2x4_gb882-prt.wrl is 1.000000000000001
-Similarity between models-2/ad2x4_gb882-prt.wrl and models-2/ad2x5_gb882.prt.wrl is 0.43215638348932317
-Similarity between models-2/ad2x4_gb882-prt.wrl and models-2/ad2x6_gb882.prt.wrl is 0.35209961774955567
-Similarity between models-2/ad2x4_gb882-prt.wrl and models-2/ad2x8_gb879.prt.wrl is 0.46644068847216097
-Similarity between models-2/ad2x4_gb882-prt.wrl and models-2/ad5-16_gb851.prt.wrl is 0.31215518860918046
-Similarity between models-2/ad2x5_gb882.prt.wrl and models-2/ad2x4_gb882-prt.wrl is 0.43215638348932317
-Similarity between models-2/ad2x5_gb882.prt.wrl and models-2/ad2x5_gb882.prt.wrl is 0.9999999999999981
-Similarity between models-2/ad2x5_gb882.prt.wrl and models-2/ad2x6_gb882.prt.wrl is 0.599624072688338
-Similarity between models-2/ad2x5_gb882.prt.wrl and models-2/ad2x8_gb879.prt.wrl is 0.3136711313247158
-Similarity between models-2/ad2x5_gb882.prt.wrl and models-2/ad5-16_gb851.prt.wrl is 0.4489098008789569
-Similarity between models-2/ad2x6_gb882.prt.wrl and models-2/ad2x4_gb882-prt.wrl is 0.35209961774955567
-Similarity between models-2/ad2x6_gb882.prt.wrl and models-2/ad2x5_gb882.prt.wrl is 0.599624072688338
-Similarity between models-2/ad2x6_gb882.prt.wrl and models-2/ad2x6_gb882.prt.wrl is 1.0000000000000004
-Similarity between models-2/ad2x6_gb882.prt.wrl and models-2/ad2x8_gb879.prt.wrl is 0.26690072023126876
-Similarity between models-2/ad2x6_gb882.prt.wrl and models-2/ad5-16_gb851.prt.wrl is 0.44053382086579945
-Similarity between models-2/ad2x8_gb879.prt.wrl and models-2/ad2x4_gb882-prt.wrl is 0.46644068847216097
-Similarity between models-2/ad2x8_gb879.prt.wrl and models-2/ad2x5_gb882.prt.wrl is 0.3136711313247158
-Similarity between models-2/ad2x8_gb879.prt.wrl and models-2/ad2x6_gb882.prt.wrl is 0.26690072023126876
-Similarity between models-2/ad2x8_gb879.prt.wrl and models-2/ad2x8_gb879.prt.wrl is 1.0000000000000013
-Similarity between models-2/ad2x8_gb879.prt.wrl and models-2/ad5-16_gb851.prt.wrl is 0.3797518457627328
-Similarity between models-2/ad5-16_gb851.prt.wrl and models-2/ad2x4_gb882-prt.wrl is 0.31215518860918046
-Similarity between models-2/ad5-16_gb851.prt.wrl and models-2/ad2x5_gb882.prt.wrl is 0.4489098008789569
-Similarity between models-2/ad5-16_gb851.prt.wrl and models-2/ad2x6_gb882.prt.wrl is 0.44053382086579945
-Similarity between models-2/ad5-16_gb851.prt.wrl and models-2/ad2x8_gb879.prt.wrl is 0.3797518457627328
-Similarity between models-2/ad5-16_gb851.prt.wrl and models-2/ad5-16_gb851.prt.wrl is 1.0000000000000004
+Similarity between models/bracket_1.wrl and models/bracket_1.wrl is 0.9999999999999996
+Similarity between models/bracket_1.wrl and models/bracket_2.wrl is 0.8209473910818965
+Similarity between models/bracket_1.wrl and models/bracket_3.wrl is 0.8233161360684896
+Similarity between models/bracket_1.wrl and models/fork_1.wrl is 0.7898059864127921
+Similarity between models/bracket_1.wrl and models/fork_2.wrl is 0.7053797018614644
+Similarity between models/bracket_1.wrl and models/fork_3.wrl is 0.7697784902628603
+Similarity between models/bracket_1.wrl and models/goodpart_1.wrl is 0.7080295620396624
+Similarity between models/bracket_1.wrl and models/goodpart_2.wrl is 0.7170387466245057
+Similarity between models/bracket_1.wrl and models/housing_1.wrl is 0.7579025633194594
+Similarity between models/bracket_1.wrl and models/housing_2.wrl is 0.7251578522163225
+Similarity between models/bracket_1.wrl and models/linkage_arm_1.wrl is 0.820534713531539
+Similarity between models/bracket_1.wrl and models/linkage_arm_2.wrl is 0.7730837873184748
+Similarity between models/bracket_1.wrl and models/socket_1.wrl is 0.6885180091213605
+Similarity between models/bracket_1.wrl and models/socket_2.wrl is 0.6768828356453729
+Similarity between models/bracket_1.wrl and models/spring_1.wrl is 0.8129411067103269
+Similarity between models/bracket_1.wrl and models/spring_2.wrl is 0.7473770305356899
+Similarity between models/bracket_2.wrl and models/bracket_1.wrl is 0.8209473910818965
+Similarity between models/bracket_2.wrl and models/bracket_2.wrl is 1.000000000000001
+Similarity between models/bracket_2.wrl and models/bracket_3.wrl is 0.7859667129327217
+Similarity between models/bracket_2.wrl and models/fork_1.wrl is 0.795481262429325
+Similarity between models/bracket_2.wrl and models/fork_2.wrl is 0.77127765229022
+Similarity between models/bracket_2.wrl and models/fork_3.wrl is 0.8097766715924034
+Similarity between models/bracket_2.wrl and models/goodpart_1.wrl is 0.7040211118720315
+Similarity between models/bracket_2.wrl and models/goodpart_2.wrl is 0.7044840723075491
+Similarity between models/bracket_2.wrl and models/housing_1.wrl is 0.7638653150277409
+Similarity between models/bracket_2.wrl and models/housing_2.wrl is 0.7630254518523347
+Similarity between models/bracket_2.wrl and models/linkage_arm_1.wrl is 0.8275259862095379
+Similarity between models/bracket_2.wrl and models/linkage_arm_2.wrl is 0.8064194200717465
+Similarity between models/bracket_2.wrl and models/socket_1.wrl is 0.6903343057213782
+Similarity between models/bracket_2.wrl and models/socket_2.wrl is 0.6699629600646109
+Similarity between models/bracket_2.wrl and models/spring_1.wrl is 0.8389509901307227
+Similarity between models/bracket_2.wrl and models/spring_2.wrl is 0.8277424070607241
+Similarity between models/bracket_3.wrl and models/bracket_1.wrl is 0.8233161360684896
+Similarity between models/bracket_3.wrl and models/bracket_2.wrl is 0.7859667129327217
+Similarity between models/bracket_3.wrl and models/bracket_3.wrl is 1.0
+Similarity between models/bracket_3.wrl and models/fork_1.wrl is 0.737354176575924
+Similarity between models/bracket_3.wrl and models/fork_2.wrl is 0.8046319743980317
+Similarity between models/bracket_3.wrl and models/fork_3.wrl is 0.7465112006602347
+Similarity between models/bracket_3.wrl and models/goodpart_1.wrl is 0.7493083586614464
+Similarity between models/bracket_3.wrl and models/goodpart_2.wrl is 0.7634320413143103
+Similarity between models/bracket_3.wrl and models/housing_1.wrl is 0.6876213385459434
+Similarity between models/bracket_3.wrl and models/housing_2.wrl is 0.673889020824821
+Similarity between models/bracket_3.wrl and models/linkage_arm_1.wrl is 0.7526224725183928
+Similarity between models/bracket_3.wrl and models/linkage_arm_2.wrl is 0.7768879824381806
+Similarity between models/bracket_3.wrl and models/socket_1.wrl is 0.7213544042157659
+Similarity between models/bracket_3.wrl and models/socket_2.wrl is 0.7120741449468285
+Similarity between models/bracket_3.wrl and models/spring_1.wrl is 0.729702999346746
+Similarity between models/bracket_3.wrl and models/spring_2.wrl is 0.7047721778337742
+Similarity between models/fork_1.wrl and models/bracket_1.wrl is 0.7898059864127921
+Similarity between models/fork_1.wrl and models/bracket_2.wrl is 0.795481262429325
+Similarity between models/fork_1.wrl and models/bracket_3.wrl is 0.737354176575924
+Similarity between models/fork_1.wrl and models/fork_1.wrl is 0.9999999999999987
+Similarity between models/fork_1.wrl and models/fork_2.wrl is 0.7179698262834655
+Similarity between models/fork_1.wrl and models/fork_3.wrl is 0.7941186920646659
+Similarity between models/fork_1.wrl and models/goodpart_1.wrl is 0.6538911455348121
+Similarity between models/fork_1.wrl and models/goodpart_2.wrl is 0.7057382993428378
+Similarity between models/fork_1.wrl and models/housing_1.wrl is 0.8117624803632105
+Similarity between models/fork_1.wrl and models/housing_2.wrl is 0.7329852273612595
+Similarity between models/fork_1.wrl and models/linkage_arm_1.wrl is 0.7991608905666092
+Similarity between models/fork_1.wrl and models/linkage_arm_2.wrl is 0.7980555593373065
+Similarity between models/fork_1.wrl and models/socket_1.wrl is 0.6822954287806773
+Similarity between models/fork_1.wrl and models/socket_2.wrl is 0.7065428755598423
+Similarity between models/fork_1.wrl and models/spring_1.wrl is 0.8050279894916162
+Similarity between models/fork_1.wrl and models/spring_2.wrl is 0.7779347898301242
+Similarity between models/fork_2.wrl and models/bracket_1.wrl is 0.7053797018614644
+Similarity between models/fork_2.wrl and models/bracket_2.wrl is 0.77127765229022
+Similarity between models/fork_2.wrl and models/bracket_3.wrl is 0.8046319743980317
+Similarity between models/fork_2.wrl and models/fork_1.wrl is 0.7179698262834655
+Similarity between models/fork_2.wrl and models/fork_2.wrl is 1.0000000000000009
+Similarity between models/fork_2.wrl and models/fork_3.wrl is 0.7368385833691405
+Similarity between models/fork_2.wrl and models/goodpart_1.wrl is 0.7663831964433895
+Similarity between models/fork_2.wrl and models/goodpart_2.wrl is 0.7760016869688507
+Similarity between models/fork_2.wrl and models/housing_1.wrl is 0.6516946066775952
+Similarity between models/fork_2.wrl and models/housing_2.wrl is 0.6435890382767174
+Similarity between models/fork_2.wrl and models/linkage_arm_1.wrl is 0.7095730123111772
+Similarity between models/fork_2.wrl and models/linkage_arm_2.wrl is 0.7022370988955262
+Similarity between models/fork_2.wrl and models/socket_1.wrl is 0.7641019522303869
+Similarity between models/fork_2.wrl and models/socket_2.wrl is 0.7409014747292173
+Similarity between models/fork_2.wrl and models/spring_1.wrl is 0.6264678131481197
+Similarity between models/fork_2.wrl and models/spring_2.wrl is 0.611685523186478
+Similarity between models/fork_3.wrl and models/bracket_1.wrl is 0.7697784902628603
+Similarity between models/fork_3.wrl and models/bracket_2.wrl is 0.8097766715924034
+Similarity between models/fork_3.wrl and models/bracket_3.wrl is 0.7465112006602347
+Similarity between models/fork_3.wrl and models/fork_1.wrl is 0.7941186920646659
+Similarity between models/fork_3.wrl and models/fork_2.wrl is 0.7368385833691405
+Similarity between models/fork_3.wrl and models/fork_3.wrl is 1.0
+Similarity between models/fork_3.wrl and models/goodpart_1.wrl is 0.7139156987295927
+Similarity between models/fork_3.wrl and models/goodpart_2.wrl is 0.765474968728272
+Similarity between models/fork_3.wrl and models/housing_1.wrl is 0.8140343971348168
+Similarity between models/fork_3.wrl and models/housing_2.wrl is 0.8111200989456137
+Similarity between models/fork_3.wrl and models/linkage_arm_1.wrl is 0.8370366062243054
+Similarity between models/fork_3.wrl and models/linkage_arm_2.wrl is 0.8093938273597202
+Similarity between models/fork_3.wrl and models/socket_1.wrl is 0.7229396014545035
+Similarity between models/fork_3.wrl and models/socket_2.wrl is 0.7174425395432068
+Similarity between models/fork_3.wrl and models/spring_1.wrl is 0.7560568873682155
+Similarity between models/fork_3.wrl and models/spring_2.wrl is 0.7376140859033933
+Similarity between models/goodpart_1.wrl and models/bracket_1.wrl is 0.7080295620396624
+Similarity between models/goodpart_1.wrl and models/bracket_2.wrl is 0.7040211118720315
+Similarity between models/goodpart_1.wrl and models/bracket_3.wrl is 0.7493083586614464
+Similarity between models/goodpart_1.wrl and models/fork_1.wrl is 0.6538911455348121
+Similarity between models/goodpart_1.wrl and models/fork_2.wrl is 0.7663831964433895
+Similarity between models/goodpart_1.wrl and models/fork_3.wrl is 0.7139156987295927
+Similarity between models/goodpart_1.wrl and models/goodpart_1.wrl is 1.0000000000000013
+Similarity between models/goodpart_1.wrl and models/goodpart_2.wrl is 0.7351072343535685
+Similarity between models/goodpart_1.wrl and models/housing_1.wrl is 0.6292342850808572
+Similarity between models/goodpart_1.wrl and models/housing_2.wrl is 0.6161701754787448
+Similarity between models/goodpart_1.wrl and models/linkage_arm_1.wrl is 0.6462613454134348
+Similarity between models/goodpart_1.wrl and models/linkage_arm_2.wrl is 0.6790616194449374
+Similarity between models/goodpart_1.wrl and models/socket_1.wrl is 0.7732175225752805
+Similarity between models/goodpart_1.wrl and models/socket_2.wrl is 0.8244120902135379
+Similarity between models/goodpart_1.wrl and models/spring_1.wrl is 0.6588618025068778
+Similarity between models/goodpart_1.wrl and models/spring_2.wrl is 0.6578940639172932
+Similarity between models/goodpart_2.wrl and models/bracket_1.wrl is 0.7170387466245057
+Similarity between models/goodpart_2.wrl and models/bracket_2.wrl is 0.7044840723075491
+Similarity between models/goodpart_2.wrl and models/bracket_3.wrl is 0.7634320413143103
+Similarity between models/goodpart_2.wrl and models/fork_1.wrl is 0.7057382993428378
+Similarity between models/goodpart_2.wrl and models/fork_2.wrl is 0.7760016869688507
+Similarity between models/goodpart_2.wrl and models/fork_3.wrl is 0.765474968728272
+Similarity between models/goodpart_2.wrl and models/goodpart_1.wrl is 0.7351072343535685
+Similarity between models/goodpart_2.wrl and models/goodpart_2.wrl is 1.0000000000000007
+Similarity between models/goodpart_2.wrl and models/housing_1.wrl is 0.7373135902189665
+Similarity between models/goodpart_2.wrl and models/housing_2.wrl is 0.7346279727106434
+Similarity between models/goodpart_2.wrl and models/linkage_arm_1.wrl is 0.6280301467640346
+Similarity between models/goodpart_2.wrl and models/linkage_arm_2.wrl is 0.6495349338635817
+Similarity between models/goodpart_2.wrl and models/socket_1.wrl is 0.7863861720920124
+Similarity between models/goodpart_2.wrl and models/socket_2.wrl is 0.7641336976960028
+Similarity between models/goodpart_2.wrl and models/spring_1.wrl is 0.665687873756679
+Similarity between models/goodpart_2.wrl and models/spring_2.wrl is 0.6495576255680553
+Similarity between models/housing_1.wrl and models/bracket_1.wrl is 0.7579025633194594
+Similarity between models/housing_1.wrl and models/bracket_2.wrl is 0.7638653150277409
+Similarity between models/housing_1.wrl and models/bracket_3.wrl is 0.6876213385459434
+Similarity between models/housing_1.wrl and models/fork_1.wrl is 0.8117624803632105
+Similarity between models/housing_1.wrl and models/fork_2.wrl is 0.6516946066775952
+Similarity between models/housing_1.wrl and models/fork_3.wrl is 0.8140343971348168
+Similarity between models/housing_1.wrl and models/goodpart_1.wrl is 0.6292342850808572
+Similarity between models/housing_1.wrl and models/goodpart_2.wrl is 0.7373135902189665
+Similarity between models/housing_1.wrl and models/housing_1.wrl is 1.0000000000000004
+Similarity between models/housing_1.wrl and models/housing_2.wrl is 0.9013503629328675
+Similarity between models/housing_1.wrl and models/linkage_arm_1.wrl is 0.8066699588951629
+Similarity between models/housing_1.wrl and models/linkage_arm_2.wrl is 0.7566821117736132
+Similarity between models/housing_1.wrl and models/socket_1.wrl is 0.6811138569939561
+Similarity between models/housing_1.wrl and models/socket_2.wrl is 0.6861729207926579
+Similarity between models/housing_1.wrl and models/spring_1.wrl is 0.8186479015353897
+Similarity between models/housing_1.wrl and models/spring_2.wrl is 0.8047517164976198
+Similarity between models/housing_2.wrl and models/bracket_1.wrl is 0.7251578522163225
+Similarity between models/housing_2.wrl and models/bracket_2.wrl is 0.7630254518523347
+Similarity between models/housing_2.wrl and models/bracket_3.wrl is 0.673889020824821
+Similarity between models/housing_2.wrl and models/fork_1.wrl is 0.7329852273612595
+Similarity between models/housing_2.wrl and models/fork_2.wrl is 0.6435890382767174
+Similarity between models/housing_2.wrl and models/fork_3.wrl is 0.8111200989456137
+Similarity between models/housing_2.wrl and models/goodpart_1.wrl is 0.6161701754787448
+Similarity between models/housing_2.wrl and models/goodpart_2.wrl is 0.7346279727106434
+Similarity between models/housing_2.wrl and models/housing_1.wrl is 0.9013503629328675
+Similarity between models/housing_2.wrl and models/housing_2.wrl is 1.0000000000000007
+Similarity between models/housing_2.wrl and models/linkage_arm_1.wrl is 0.7779988252872626
+Similarity between models/housing_2.wrl and models/linkage_arm_2.wrl is 0.7521006417967582
+Similarity between models/housing_2.wrl and models/socket_1.wrl is 0.6672754003233604
+Similarity between models/housing_2.wrl and models/socket_2.wrl is 0.6794053256935798
+Similarity between models/housing_2.wrl and models/spring_1.wrl is 0.7708378468484376
+Similarity between models/housing_2.wrl and models/spring_2.wrl is 0.7676307946458019
+Similarity between models/linkage_arm_1.wrl and models/bracket_1.wrl is 0.820534713531539
+Similarity between models/linkage_arm_1.wrl and models/bracket_2.wrl is 0.8275259862095379
+Similarity between models/linkage_arm_1.wrl and models/bracket_3.wrl is 0.7526224725183928
+Similarity between models/linkage_arm_1.wrl and models/fork_1.wrl is 0.7991608905666092
+Similarity between models/linkage_arm_1.wrl and models/fork_2.wrl is 0.7095730123111772
+Similarity between models/linkage_arm_1.wrl and models/fork_3.wrl is 0.8370366062243054
+Similarity between models/linkage_arm_1.wrl and models/goodpart_1.wrl is 0.6462613454134348
+Similarity between models/linkage_arm_1.wrl and models/goodpart_2.wrl is 0.6280301467640346
+Similarity between models/linkage_arm_1.wrl and models/housing_1.wrl is 0.8066699588951629
+Similarity between models/linkage_arm_1.wrl and models/housing_2.wrl is 0.7779988252872626
+Similarity between models/linkage_arm_1.wrl and models/linkage_arm_1.wrl is 0.9999999999999997
+Similarity between models/linkage_arm_1.wrl and models/linkage_arm_2.wrl is 0.8672045750324512
+Similarity between models/linkage_arm_1.wrl and models/socket_1.wrl is 0.6510747969519451
+Similarity between models/linkage_arm_1.wrl and models/socket_2.wrl is 0.6475596039670672
+Similarity between models/linkage_arm_1.wrl and models/spring_1.wrl is 0.9044549553238218
+Similarity between models/linkage_arm_1.wrl and models/spring_2.wrl is 0.8594405182488125
+Similarity between models/linkage_arm_2.wrl and models/bracket_1.wrl is 0.7730837873184748
+Similarity between models/linkage_arm_2.wrl and models/bracket_2.wrl is 0.8064194200717465
+Similarity between models/linkage_arm_2.wrl and models/bracket_3.wrl is 0.7768879824381806
+Similarity between models/linkage_arm_2.wrl and models/fork_1.wrl is 0.7980555593373065
+Similarity between models/linkage_arm_2.wrl and models/fork_2.wrl is 0.7022370988955262
+Similarity between models/linkage_arm_2.wrl and models/fork_3.wrl is 0.8093938273597202
+Similarity between models/linkage_arm_2.wrl and models/goodpart_1.wrl is 0.6790616194449374
+Similarity between models/linkage_arm_2.wrl and models/goodpart_2.wrl is 0.6495349338635817
+Similarity between models/linkage_arm_2.wrl and models/housing_1.wrl is 0.7566821117736132
+Similarity between models/linkage_arm_2.wrl and models/housing_2.wrl is 0.7521006417967582
+Similarity between models/linkage_arm_2.wrl and models/linkage_arm_1.wrl is 0.8672045750324512
+Similarity between models/linkage_arm_2.wrl and models/linkage_arm_2.wrl is 1.0000000000000009
+Similarity between models/linkage_arm_2.wrl and models/socket_1.wrl is 0.6513578425130163
+Similarity between models/linkage_arm_2.wrl and models/socket_2.wrl is 0.6426423672696783
+Similarity between models/linkage_arm_2.wrl and models/spring_1.wrl is 0.8501980375885816
+Similarity between models/linkage_arm_2.wrl and models/spring_2.wrl is 0.8157044196194917
+Similarity between models/socket_1.wrl and models/bracket_1.wrl is 0.6885180091213605
+Similarity between models/socket_1.wrl and models/bracket_2.wrl is 0.6903343057213782
+Similarity between models/socket_1.wrl and models/bracket_3.wrl is 0.7213544042157659
+Similarity between models/socket_1.wrl and models/fork_1.wrl is 0.6822954287806773
+Similarity between models/socket_1.wrl and models/fork_2.wrl is 0.7641019522303869
+Similarity between models/socket_1.wrl and models/fork_3.wrl is 0.7229396014545035
+Similarity between models/socket_1.wrl and models/goodpart_1.wrl is 0.7732175225752805
+Similarity between models/socket_1.wrl and models/goodpart_2.wrl is 0.7863861720920124
+Similarity between models/socket_1.wrl and models/housing_1.wrl is 0.6811138569939561
+Similarity between models/socket_1.wrl and models/housing_2.wrl is 0.6672754003233604
+Similarity between models/socket_1.wrl and models/linkage_arm_1.wrl is 0.6510747969519451
+Similarity between models/socket_1.wrl and models/linkage_arm_2.wrl is 0.6513578425130163
+Similarity between models/socket_1.wrl and models/socket_1.wrl is 1.0000000000000009
+Similarity between models/socket_1.wrl and models/socket_2.wrl is 0.8833370785243716
+Similarity between models/socket_1.wrl and models/spring_1.wrl is 0.6278426702806406
+Similarity between models/socket_1.wrl and models/spring_2.wrl is 0.6243157961625819
+Similarity between models/socket_2.wrl and models/bracket_1.wrl is 0.6768828356453729
+Similarity between models/socket_2.wrl and models/bracket_2.wrl is 0.6699629600646109
+Similarity between models/socket_2.wrl and models/bracket_3.wrl is 0.7120741449468285
+Similarity between models/socket_2.wrl and models/fork_1.wrl is 0.7065428755598423
+Similarity between models/socket_2.wrl and models/fork_2.wrl is 0.7409014747292173
+Similarity between models/socket_2.wrl and models/fork_3.wrl is 0.7174425395432068
+Similarity between models/socket_2.wrl and models/goodpart_1.wrl is 0.8244120902135379
+Similarity between models/socket_2.wrl and models/goodpart_2.wrl is 0.7641336976960028
+Similarity between models/socket_2.wrl and models/housing_1.wrl is 0.6861729207926579
+Similarity between models/socket_2.wrl and models/housing_2.wrl is 0.6794053256935798
+Similarity between models/socket_2.wrl and models/linkage_arm_1.wrl is 0.6475596039670672
+Similarity between models/socket_2.wrl and models/linkage_arm_2.wrl is 0.6426423672696783
+Similarity between models/socket_2.wrl and models/socket_1.wrl is 0.8833370785243716
+Similarity between models/socket_2.wrl and models/socket_2.wrl is 1.0
+Similarity between models/socket_2.wrl and models/spring_1.wrl is 0.6273921332198359
+Similarity between models/socket_2.wrl and models/spring_2.wrl is 0.6476094450372117
+Similarity between models/spring_1.wrl and models/bracket_1.wrl is 0.8129411067103269
+Similarity between models/spring_1.wrl and models/bracket_2.wrl is 0.8389509901307227
+Similarity between models/spring_1.wrl and models/bracket_3.wrl is 0.729702999346746
+Similarity between models/spring_1.wrl and models/fork_1.wrl is 0.8050279894916162
+Similarity between models/spring_1.wrl and models/fork_2.wrl is 0.6264678131481197
+Similarity between models/spring_1.wrl and models/fork_3.wrl is 0.7560568873682155
+Similarity between models/spring_1.wrl and models/goodpart_1.wrl is 0.6588618025068778
+Similarity between models/spring_1.wrl and models/goodpart_2.wrl is 0.665687873756679
+Similarity between models/spring_1.wrl and models/housing_1.wrl is 0.8186479015353897
+Similarity between models/spring_1.wrl and models/housing_2.wrl is 0.7708378468484376
+Similarity between models/spring_1.wrl and models/linkage_arm_1.wrl is 0.9044549553238218
+Similarity between models/spring_1.wrl and models/linkage_arm_2.wrl is 0.8501980375885816
+Similarity between models/spring_1.wrl and models/socket_1.wrl is 0.6278426702806406
+Similarity between models/spring_1.wrl and models/socket_2.wrl is 0.6273921332198359
+Similarity between models/spring_1.wrl and models/spring_1.wrl is 0.9999999999999999
+Similarity between models/spring_1.wrl and models/spring_2.wrl is 0.9401118476697721
+Similarity between models/spring_2.wrl and models/bracket_1.wrl is 0.7473770305356899
+Similarity between models/spring_2.wrl and models/bracket_2.wrl is 0.8277424070607241
+Similarity between models/spring_2.wrl and models/bracket_3.wrl is 0.7047721778337742
+Similarity between models/spring_2.wrl and models/fork_1.wrl is 0.7779347898301242
+Similarity between models/spring_2.wrl and models/fork_2.wrl is 0.611685523186478
+Similarity between models/spring_2.wrl and models/fork_3.wrl is 0.7376140859033933
+Similarity between models/spring_2.wrl and models/goodpart_1.wrl is 0.6578940639172932
+Similarity between models/spring_2.wrl and models/goodpart_2.wrl is 0.6495576255680553
+Similarity between models/spring_2.wrl and models/housing_1.wrl is 0.8047517164976198
+Similarity between models/spring_2.wrl and models/housing_2.wrl is 0.7676307946458019
+Similarity between models/spring_2.wrl and models/linkage_arm_1.wrl is 0.8594405182488125
+Similarity between models/spring_2.wrl and models/linkage_arm_2.wrl is 0.8157044196194917
+Similarity between models/spring_2.wrl and models/socket_1.wrl is 0.6243157961625819
+Similarity between models/spring_2.wrl and models/socket_2.wrl is 0.6476094450372117
+Similarity between models/spring_2.wrl and models/spring_1.wrl is 0.9401118476697721
+Similarity between models/spring_2.wrl and models/spring_2.wrl is 0.9999999999999996
